--- a/config/local.yml
+++ b/config/local.yml
@@ -10,12 +10,12 @@ jwt:
   key: QQYnRFerJTSEcrfB89fw8prOaObmrch8
 
 mysql:
-  user: root:123456@tcp(127.0.0.1:3306)/user?charset=utf8mb4&parseTime=True&loc=Local
+  user: root:root@tcp(127.0.0.1:3306)/user?charset=utf8mb4&parseTime=True&loc=Local
   max-idle-conns: 10
   max-open-conns: 10
 
 redis:
-  addr: 127.0.0.1:6390
+  addr: 127.0.0.1:6379
   password: ""
   db: 0
   read_timeout: 0.2s
