数据库修改

--- a/config/local.yml
+++ b/config/local.yml
@@ -4,7 +4,7 @@ env: local
 http:
   port: 8089
 mysql:
-  user: root:root@tcp(127.0.0.1:3306)/yoyo_test?charset=utf8mb4&parseTime=True&loc=Local
+  user: root:root@tcp(127.0.0.1:3306)/user?charset=utf8mb4&parseTime=True&loc=Local
   max-idle-conns: 10
   max-open-conns: 10
 
